[gd_scene load_steps=3 format=3 uid="uid://crpp8ks0lg6o7"]

[ext_resource type="Script" uid="uid://b50bqo5lj4o51" path="res://weird_banana.gd" id="1_pw8co"]
[ext_resource type="Texture2D" uid="uid://ci3oqtoa6jij4" path="res://assets/Pineapple.png" id="2_snbyl"]

[node name="WeirdBanana" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_pw8co")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="TimerRemaining" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Timer"

[node name="Timer" type="Timer" parent="MarginContainer/TimerRemaining"]
wait_time = 10.0
one_shot = true
autostart = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="QuestionLable" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 70
text = "GUESS ME"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GuessItemImage" type="TextureRect" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_snbyl")
expand_mode = 2
stretch_mode = 5

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GuessResult" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Correct" type="Label" parent="MarginContainer/VBoxContainer/GuessResult"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -29.0
offset_right = 29.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Correct"
horizontal_alignment = 1

[node name="Wrong" type="Label" parent="MarginContainer/VBoxContainer/GuessResult"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -29.0
offset_right = 29.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Wrong"
horizontal_alignment = 1

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AnwerButtonContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
columns = 2

[node name="ButtonA" type="Button" parent="MarginContainer/VBoxContainer/AnwerButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "AnswerA "

[node name="ButtonB" type="Button" parent="MarginContainer/VBoxContainer/AnwerButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Answer B
"

[node name="ButtonC" type="Button" parent="MarginContainer/VBoxContainer/AnwerButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Answer C"

[node name="ButtonD" type="Button" parent="MarginContainer/VBoxContainer/AnwerButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Answer D
"

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SetNewItem" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Guess New Item"

[node name="GameOver" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="GameOverLabel" type="Label" parent="MarginContainer/GameOver"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 70
text = "Game Over"
horizontal_alignment = 1

[node name="RestartGameButton" type="Button" parent="MarginContainer/GameOver"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 65
text = "Play Again
"

[connection signal="timeout" from="MarginContainer/TimerRemaining/Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/AnwerButtonContainer/ButtonA" to="." method="_on_guess_pressed" flags=18]
[connection signal="pressed" from="MarginContainer/VBoxContainer/AnwerButtonContainer/ButtonB" to="." method="_on_guess_pressed" flags=18]
[connection signal="pressed" from="MarginContainer/VBoxContainer/AnwerButtonContainer/ButtonC" to="." method="_on_guess_pressed" flags=18]
[connection signal="pressed" from="MarginContainer/VBoxContainer/AnwerButtonContainer/ButtonD" to="." method="_on_guess_pressed" flags=18]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SetNewItem" to="." method="_on_set_new_item_pressed"]
[connection signal="pressed" from="MarginContainer/GameOver/RestartGameButton" to="." method="_on_restart_game_button_pressed"]
